--- a/coordinador.html
+++ b/coordinador.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-<form id="form1" name="form1" method="post" action="">
+<form id="form1" name="form1" method="post" action="add_coordinador.php">
   <p><h1>Añadir Coordinador</h1>
   <p>
     <label for="nombre">Nombre:</label>
