--- a/coordinador.html
+++ b/coordinador.html
@@ -3,45 +3,58 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>Untitled Document</title>
+<script src="SpryAssets/SpryValidationTextField.js" type="text/javascript"></script>
 <script src="SpryAssets/SpryValidationPassword.js" type="text/javascript"></script>
 <script src="SpryAssets/SpryValidationConfirm.js" type="text/javascript"></script>
-<script src="SpryAssets/SpryValidationTextField.js" type="text/javascript"></script>
+<link href="SpryAssets/SpryValidationTextField.css" rel="stylesheet" type="text/css" />
 <link href="SpryAssets/SpryValidationPassword.css" rel="stylesheet" type="text/css" />
 <link href="SpryAssets/SpryValidationConfirm.css" rel="stylesheet" type="text/css" />
-<link href="SpryAssets/SpryValidationTextField.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
 <form id="form1" name="form1" method="post" action="add_coordinador.php">
   <p><h1>Añadir Coordinador</h1>
-  <p>
-    <label for="nombre">Nombre:</label>
-    <span id="sprytextfield1">
-    <input type="text" name="nombre" id="nombre" />
-    <span class="textfieldRequiredMsg">A value is required.</span></span></p>
-  <p>
-    <label for="apellido">Apellido:</label>
-    <span id="sprytextfield2">
-    <input type="text" name="apellido" id="apellido" />
-    <span class="textfieldRequiredMsg">A value is required.</span></span></p>
-  <p>
-    <label for="username">Usuario:</label>
-    <span id="sprytextfield3">
-    <input type="text" name="username" id="username" />
-    <span class="textfieldRequiredMsg">A value is required.</span></span></p>
-  <p><span id="sprypassword1">
-    <label for="password">Contraseña:</label>
-    <input type="password" name="password" id="password" />
-  <span class="passwordRequiredMsg">A value is required.</span></span></p>
-  <p><span id="spryconfirm1">
-    <label for="confirm_pass">Confirmar contraseña: </label>
-    <input type="password" name="confirm_pass" id="confirm_pass" />
-  <span class="confirmRequiredMsg">A value is required.</span><span class="confirmInvalidMsg">The values don't match.</span></span></p>
-  <p>
-    <label for="email">Correo Electrónico:</label>
-    <span id="sprytextfield4">
-    <input type="text" name="email" id="email" />
-    <span class="textfieldRequiredMsg">A value is required.</span><span class="textfieldInvalidFormatMsg">Invalid format.</span></span></p>
+  <table width="100%" border="0" cellspacing="2" cellpadding="2">
+    <tr>
+      <td width="16%"><label for="nombre4">Nombre:</label></td>
+      <td><span id="sprytextfield1">
+      <label for="nombre3"></label>
+      <input type="text" name="nombre" id="nombre3" />
+      <span class="textfieldRequiredMsg">A value is required.</span></span></td>
+    </tr>
+    <tr>
+      <td>Apellido: </td>
+      <td><span id="sprytextfield2">
+        <label for="apellido2"></label>
+        <input type="text" name="apellido" id="apellido2" />
+      <span class="textfieldRequiredMsg">A value is required.</span></span></td>
+    </tr>
+    <tr>
+      <td>Usuario:</td>
+      <td><span id="sprytextfield3">
+        <label for="username2"></label>
+        <input type="text" name="username" id="username2" />
+      <span class="textfieldRequiredMsg">A value is required.</span></span></td>
+    </tr>
+    <tr>
+      <td>Contraseña:</td>
+      <td><span id="sprypassword2">
+        <label for="password"></label>
+        <input type="password" name="password" id="password" />
+      <span class="passwordRequiredMsg">A value is required.</span></span>Confirmar contraseña: <span id="spryconfirm2">
+        <label for="confirm_pass"></label>
+        <input type="password" name="confirm_pass" id="confirm_pass" />
+      <span class="confirmRequiredMsg">A value is required.</span><span class="confirmInvalidMsg">The values don't match.</span></span></td>
+    </tr>
+    <tr>
+      <td><label for="email2">Correo Electrónico:</label></td>
+      <td><span id="sprytextfield5">
+      <label for="email3"></label>
+      <input type="text" name="email" id="email3" />
+      <span class="textfieldRequiredMsg">A value is required.</span><span class="textfieldInvalidFormatMsg">Invalid format.</span></span></td>
+    </tr>
+  </table>
+  <p><span id="sprytextfield4"><span class="textfieldRequiredMsg">A value is required.</span><span class="textfieldInvalidFormatMsg">Invalid format</span></span></p>
   <p>
     <input type="submit" name="button" id="button" value="Añadir" />
     <input type="reset" name="button2" id="button2" value="Borrar" />
@@ -49,12 +62,12 @@
   <p>&nbsp;</p>
 </p></form>
 <script type="text/javascript">
-var sprypassword1 = new Spry.Widget.ValidationPassword("sprypassword1");
-var spryconfirm1 = new Spry.Widget.ValidationConfirm("spryconfirm1", "password");
-var sprytextfield1 = new Spry.Widget.ValidationTextField("sprytextfield1", "none", {validateOn:["blur"]});
-var sprytextfield2 = new Spry.Widget.ValidationTextField("sprytextfield2", "none", {validateOn:["blur"]});
-var sprytextfield3 = new Spry.Widget.ValidationTextField("sprytextfield3", "none", {validateOn:["blur"]});
-var sprytextfield4 = new Spry.Widget.ValidationTextField("sprytextfield4", "email", {validateOn:["blur"]});
+var sprytextfield1 = new Spry.Widget.ValidationTextField("sprytextfield1");
+var sprytextfield2 = new Spry.Widget.ValidationTextField("sprytextfield2");
+var sprytextfield3 = new Spry.Widget.ValidationTextField("sprytextfield3");
+var sprypassword2 = new Spry.Widget.ValidationPassword("sprypassword2");
+var spryconfirm2 = new Spry.Widget.ValidationConfirm("spryconfirm2", "password");
+var sprytextfield5 = new Spry.Widget.ValidationTextField("sprytextfield5", "email");
 </script>
 </body>
 </html>
